dim: calculate full_street_name, preprocessing d_camera, d_street fix LIKE from =

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,22 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/05/23 20:16:02 WARN Utils: Your hostname, pcminh-ThinkPad resolves to a loopback address: 127.0.1.1; using 172.31.163.12 instead (on interface eth0)\n",
-      "23/05/23 20:16:02 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/05/23 20:16:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions\n",
@@ -44,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/05/23 20:16:28 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+      "                                                                                \r"
      ]
     }
    ],
@@ -125,22 +112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+------------+-----------+\n",
-      "|namespace|   tableName|isTemporary|\n",
-      "+---------+------------+-----------+\n",
-      "|         |     crashes|       true|\n",
-      "|         |redlight_cam|       true|\n",
-      "|         |   speed_cam|       true|\n",
-      "|         |     streets|       true|\n",
-      "|         |traffic_hist|       true|\n",
-      "+---------+------------+-----------+\n",
+      "+---------+----------------+-----------+\n",
+      "|namespace|       tableName|isTemporary|\n",
+      "+---------+----------------+-----------+\n",
+      "|         |         crashes|       true|\n",
+      "|         |d_camera_staging|       true|\n",
+      "|         |       d_streets|       true|\n",
+      "|         |    redlight_cam|       true|\n",
+      "|         |       speed_cam|       true|\n",
+      "|         |         streets|       true|\n",
+      "|         |    traffic_hist|       true|\n",
+      "+---------+----------------+-----------+\n",
       "\n"
      ]
     }
@@ -215,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,24 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/05/23 21:24:55 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      "23/05/25 23:54:06 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
       " Header: ADDRESS, CAMERA ID, LATITUDE, LONGITUDE\n",
       " Schema: address, camera_id, latitude, longitude\n",
       "Expected: camera_id but found: CAMERA ID\n",
       "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/speed_cam/speed_cam.csv\n",
-      "23/05/23 21:24:56 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      "23/05/25 23:54:07 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
       " Header: INTERSECTION, CAMERA ID, ADDRESS, LATITUDE, LONGITUDE\n",
       " Schema: intersection, camera_id, address, latitude, longitude\n",
       "Expected: camera_id but found: CAMERA ID\n",
       "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/redlight_cam/redlight_cam.csv\n",
-      "[Stage 580:>                                                      (0 + 12) / 12]\r"
+      "[Stage 5:=========>                                               (2 + 10) / 12]\r"
      ]
     },
     {
@@ -377,62 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/05/23 21:28:05 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: ADDRESS, CAMERA ID, LATITUDE, LONGITUDE\n",
-      " Schema: address, camera_id, latitude, longitude\n",
-      "Expected: camera_id but found: CAMERA ID\n",
-      "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/speed_cam/speed_cam.csv\n",
-      "23/05/23 21:28:05 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: INTERSECTION, CAMERA ID, ADDRESS, LATITUDE, LONGITUDE\n",
-      " Schema: intersection, camera_id, address, latitude, longitude\n",
-      "Expected: camera_id but found: CAMERA ID\n",
-      "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/redlight_cam/redlight_cam.csv\n",
-      "[Stage 658:=========>                                             (2 + 10) / 12]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+--------+----------------------+--------------------+--------------------+-------+---------------+------------+-------------+\n",
-      "|camera_id|    type|red_light_intersection|             address|           addr_toks|addr_no|    street_name|    latitude|    longitude|\n",
-      "+---------+--------+----------------------+--------------------+--------------------+-------+---------------+------------+-------------+\n",
-      "|   CHI198|   speed|                  null|  2223 N KEDZIE BLVD|[2223, N, KEDZIE,...|   2223|  N KEDZIE BLVD|41.921841178|-87.706978686|\n",
-      "|   CHI173|   speed|                  null| 5006 S WESTERN BLVD|[5006, S, WESTERN...|   5006| S WESTERN BLVD|41.802705576|-87.683844789|\n",
-      "|   CHI122|   speed|                  null| 3047 W JACKSON BLVD|[3047, W, JACKSON...|   3047| W JACKSON BLVD|41.877242774|-87.702952689|\n",
-      "|   CHI121|   speed|                  null|1315 W GARFIELD BLVD|[1315, W, GARFIEL...|   1315|W GARFIELD BLVD|41.793645091|-87.657860764|\n",
-      "|   CHI119|   speed|                  null|1334 W GARFIELD BLVD|[1334, W, GARFIEL...|   1334|W GARFIELD BLVD|41.794226466|-87.658709999|\n",
-      "|     2274|redlight|  GARFIELD AND ASHLAND|1600 W GARFIELD BLVD|[1600, W, GARFIEL...|   1600|W GARFIELD BLVD| 41.79413322|-87.664645263|\n",
-      "|     3043|redlight|  MICHIGAN AND JACKSON|  100 E JACKSON BLVD|[100, E, JACKSON,...|    100| E JACKSON BLVD|41.878390124|-87.624237311|\n",
-      "|     2264|redlight|  WENTWORTH AND GAR...| 200 W GARFIELD BLVD|[200, W, GARFIELD...|    200|W GARFIELD BLVD|41.794670385|-87.630547476|\n",
-      "|     2112|redlight|  PERSHING AND WESTERN| 3900 S WESTERN BLVD|[3900, S, WESTERN...|   3900| S WESTERN BLVD|41.822963628|-87.684384785|\n",
-      "|     2172|redlight|      WESTERN AND 51ST| 5100 S WESTERN BLVD|[5100, S, WESTERN...|   5100| S WESTERN BLVD|41.801080204|-87.683818209|\n",
-      "+---------+--------+----------------------+--------------------+--------------------+-------+---------------+------------+-------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
-   "source": [
-    "dcam.filter(\"street_name LIKE '%BLVD'\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,30 +386,39 @@
     "        d_camera_staging dcs\n",
     "    LEFT JOIN\n",
     "        d_streets ds\n",
-    "    ON ds.full_street_name = CONCAT(dcs.street_name, '%')\n",
+    "    ON ds.full_street_name LIKE CONCAT(dcs.street_name, '%')\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(\"select * from d_street where full_street_name like \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/05/23 21:52:23 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      "23/05/26 00:01:00 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
       " Header: ADDRESS, CAMERA ID, LATITUDE, LONGITUDE\n",
       " Schema: address, camera_id, latitude, longitude\n",
       "Expected: camera_id but found: CAMERA ID\n",
       "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/speed_cam/speed_cam.csv\n",
-      "23/05/23 21:52:23 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      "23/05/26 00:01:00 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
       " Header: Full Street Name\n",
       " Schema: full_street_name\n",
       "Expected: full_street_name but found: Full Street Name\n",
       "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/streets/streets.csv\n",
-      "23/05/23 21:52:23 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      "23/05/26 00:01:00 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
       " Header: INTERSECTION, CAMERA ID, ADDRESS, LATITUDE, LONGITUDE\n",
       " Schema: intersection, camera_id, address, latitude, longitude\n",
       "Expected: camera_id but found: CAMERA ID\n",
@@ -489,13 +432,83 @@
        "547"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dcam2.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/05/26 00:01:47 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/05/26 00:01:47 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/05/26 00:01:47 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: ADDRESS, CAMERA ID, LATITUDE, LONGITUDE\n",
+      " Schema: address, camera_id, latitude, longitude\n",
+      "Expected: camera_id but found: CAMERA ID\n",
+      "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/speed_cam/speed_cam.csv\n",
+      "23/05/26 00:01:47 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: INTERSECTION, CAMERA ID, ADDRESS, LATITUDE, LONGITUDE\n",
+      " Schema: intersection, camera_id, address, latitude, longitude\n",
+      "Expected: camera_id but found: CAMERA ID\n",
+      "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/redlight_cam/redlight_cam.csv\n",
+      "23/05/26 00:01:48 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/05/26 00:01:48 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/05/26 00:01:49 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
+      " Header: Full Street Name, Direction, Street , Suffix\n",
+      " Schema: full_street_name, direction, street, suffix\n",
+      "Expected: full_street_name but found: Full Street Name\n",
+      "CSV file: file:///home/pcminh/bigdata-capstone/data/raw/traffic/streets/streets.csv\n",
+      "23/05/26 00:01:49 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "23/05/26 00:01:49 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----+----------------------+--------------------+----------+------------+-------------+\n",
+      "|camera_id| type|red_light_intersection|             address|street_key|    latitude|    longitude|\n",
+      "+---------+-----+----------------------+--------------------+----------+------------+-------------+\n",
+      "|   CHI188|speed|                  null|   6935 W ADDISON ST|       470|41.945293896|-87.799816069|\n",
+      "|   CHI128|speed|                  null|  1226 N WESTERN AVE|      2533|41.903817103|-87.687194998|\n",
+      "|   CHI128|speed|                  null|  1226 N WESTERN AVE|      2534|41.903817103|-87.687194998|\n",
+      "|   CHI010|speed|                  null|     1111 N HUMBOLDT|      1312|        null|         null|\n",
+      "|   CHI010|speed|                  null|     1111 N HUMBOLDT|      1313|        null|         null|\n",
+      "|   CHI010|speed|                  null|     1111 N HUMBOLDT|      1314|        null|         null|\n",
+      "|   CHI010|speed|                  null|     1111 N HUMBOLDT|      1315|        null|         null|\n",
+      "|   CHI154|speed|                  null|     2416 W 103RD ST|        16|41.706487201|-87.682391059|\n",
+      "|   CHI180|speed|                  null|7157 S SOUTH CHIC...|      2318|41.764775432|-87.603827682|\n",
+      "|   CHI141|speed|                  null|      3542 E 95TH ST|       437| 41.72304462|-87.537040758|\n",
+      "|   CHI020|speed|                  null|    2912 W ROOSEVELT|      2236|41.866585283|-87.698962375|\n",
+      "|   CHI058|speed|                  null|      5816 W JACKSON|      1375|41.877189405|-87.770369502|\n",
+      "|   CHI068|speed|                  null|      5529 S WESTERN|      2535|        null|         null|\n",
+      "|   CHI068|speed|                  null|      5529 S WESTERN|      2536|        null|         null|\n",
+      "|   CHI068|speed|                  null|      5529 S WESTERN|      2537|        null|         null|\n",
+      "|   CHI162|speed|                  null|   1117 S PULASKI RD|      2178|41.867401835|-87.725083688|\n",
+      "|   CHI201|speed|                  null|2501 W IRVING PAR...|      1372| 41.95389316|-87.690933468|\n",
+      "|   CHI022|speed|                  null|   11153 S VINCENNES|      2457|41.690701951|-87.664122385|\n",
+      "|   CHI192|speed|                  null|   6020 W FOSTER AVE|      1141|41.975775196|-87.779020068|\n",
+      "|   CHI120|speed|                  null|10318 S INDIANAPOLIS|      1363|41.707576903|-87.529848261|\n",
+      "+---------+-----+----------------------+--------------------+----------+------------+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dcam2.show()"
    ]
   },
   {
