--- a/streaming.ipynb
+++ b/streaming.ipynb
@@ -42,8 +42,8 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/05/22 17:52:44 WARN Utils: Your hostname, pcminh-ThinkPad resolves to a loopback address: 127.0.1.1; using 172.31.163.12 instead (on interface eth0)\n",
-      "23/05/22 17:52:44 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/05/25 09:39:51 WARN Utils: Your hostname, pcminh-ThinkPad resolves to a loopback address: 127.0.1.1; using 172.31.163.12 instead (on interface eth0)\n",
+      "23/05/25 09:39:51 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -61,7 +61,7 @@
       "The jars for the packages stored in: /home/pcminh/.ivy2/jars\n",
       "org.apache.spark#spark-streaming-kafka-0-10_2.12 added as a dependency\n",
       "org.apache.spark#spark-sql-kafka-0-10_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-4a12b75e-bb15-4cba-86da-1168861c0ab4;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-124c41fa-45eb-4e41-b88a-79b0e160238a;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.apache.spark#spark-streaming-kafka-0-10_2.12;3.3.0 in central\n",
       "\tfound org.apache.spark#spark-token-provider-kafka-0-10_2.12;3.3.0 in central\n",
@@ -75,12 +75,14 @@
       "\tfound commons-logging#commons-logging;1.1.3 in central\n",
       "\tfound com.google.code.findbugs#jsr305;3.0.0 in central\n",
       "\tfound org.apache.spark#spark-sql-kafka-0-10_2.12;3.3.0 in central\n",
-      "\tfound org.apache.commons#commons-pool2;2.11.1 in central\n",
-      ":: resolution report :: resolve 2332ms :: artifacts dl 20ms\n",
+      "You probably access the destination server through a proxy server that is not well configured.\n",
+      "You probably access the destination server through a proxy server that is not well configured.\n",
+      "You probably access the destination server through a proxy server that is not well configured.\n",
+      "You probably access the destination server through a proxy server that is not well configured.\n",
+      ":: resolution report :: resolve 20742ms :: artifacts dl 25ms\n",
       "\t:: modules in use:\n",
       "\tcom.google.code.findbugs#jsr305;3.0.0 from central in [default]\n",
       "\tcommons-logging#commons-logging;1.1.3 from central in [default]\n",
-      "\torg.apache.commons#commons-pool2;2.11.1 from central in [default]\n",
       "\torg.apache.hadoop#hadoop-client-api;3.3.2 from central in [default]\n",
       "\torg.apache.hadoop#hadoop-client-runtime;3.3.2 from central in [default]\n",
       "\torg.apache.kafka#kafka-clients;2.8.1 from central in [default]\n",
@@ -95,21 +97,93 @@
       "\t|                  |            modules            ||   artifacts   |\n",
       "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
       "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   13  |   1   |   1   |   0   ||   13  |   0   |\n",
+      "\t|      default     |   13  |   0   |   0   |   0   ||   12  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
       "\n",
       ":: problems summary ::\n",
-      ":::: ERRORS\n",
-      "\tunknown resolver null\n",
+      ":::: WARNINGS\n",
+      "\tHost repo1.maven.org not found. url=https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.pom\n",
+      "\n",
+      "\tHost repo1.maven.org not found. url=https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar\n",
+      "\n",
+      "\tHost repos.spark-packages.org not found. url=https://repos.spark-packages.org/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.pom\n",
+      "\n",
+      "\tHost repos.spark-packages.org not found. url=https://repos.spark-packages.org/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar\n",
+      "\n",
+      "\t\tmodule not found: org.apache.commons#commons-pool2;2.11.1\n",
+      "\n",
+      "\t==== local-m2-cache: tried\n",
+      "\n",
+      "\t  file:/home/pcminh/.m2/repository/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.pom\n",
+      "\n",
+      "\t  -- artifact org.apache.commons#commons-pool2;2.11.1!commons-pool2.jar:\n",
+      "\n",
+      "\t  file:/home/pcminh/.m2/repository/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar\n",
+      "\n",
+      "\t==== local-ivy-cache: tried\n",
+      "\n",
+      "\t  /home/pcminh/.ivy2/local/org.apache.commons/commons-pool2/2.11.1/ivys/ivy.xml\n",
+      "\n",
+      "\t  -- artifact org.apache.commons#commons-pool2;2.11.1!commons-pool2.jar:\n",
+      "\n",
+      "\t  /home/pcminh/.ivy2/local/org.apache.commons/commons-pool2/2.11.1/jars/commons-pool2.jar\n",
+      "\n",
+      "\t==== central: tried\n",
+      "\n",
+      "\t  https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.pom\n",
+      "\n",
+      "\t  -- artifact org.apache.commons#commons-pool2;2.11.1!commons-pool2.jar:\n",
+      "\n",
+      "\t  https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar\n",
+      "\n",
+      "\t==== spark-packages: tried\n",
+      "\n",
+      "\t  https://repos.spark-packages.org/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.pom\n",
+      "\n",
+      "\t  -- artifact org.apache.commons#commons-pool2;2.11.1!commons-pool2.jar:\n",
+      "\n",
+      "\t  https://repos.spark-packages.org/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar\n",
+      "\n",
+      "\t\t::::::::::::::::::::::::::::::::::::::::::::::\n",
+      "\n",
+      "\t\t::          UNRESOLVED DEPENDENCIES         ::\n",
+      "\n",
+      "\t\t::::::::::::::::::::::::::::::::::::::::::::::\n",
+      "\n",
+      "\t\t:: org.apache.commons#commons-pool2;2.11.1: not found\n",
+      "\n",
+      "\t\t::::::::::::::::::::::::::::::::::::::::::::::\n",
+      "\n",
       "\n",
       "\n",
       ":: USE VERBOSE OR DEBUG MESSAGE LEVEL FOR MORE DETAILS\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-4a12b75e-bb15-4cba-86da-1168861c0ab4\n",
-      "\tconfs: [default]\n",
-      "\t0 artifacts copied, 13 already retrieved (0kB/11ms)\n",
-      "23/05/22 17:52:48 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "Exception in thread \"main\" java.lang.RuntimeException: [unresolved dependency: org.apache.commons#commons-pool2;2.11.1: not found]\n",
+      "\tat org.apache.spark.deploy.SparkSubmitUtils$.resolveMavenCoordinates(SparkSubmit.scala:1528)\n",
+      "\tat org.apache.spark.util.DependencyUtils$.resolveMavenDependencies(DependencyUtils.scala:185)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit.prepareSubmitEnvironment(SparkSubmit.scala:332)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit.org$apache$spark$deploy$SparkSubmit$$runMain(SparkSubmit.scala:955)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit.doRunMain$1(SparkSubmit.scala:192)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit.submit(SparkSubmit.scala:215)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit.doSubmit(SparkSubmit.scala:91)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit$$anon$2.doSubmit(SparkSubmit.scala:1111)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit$.main(SparkSubmit.scala:1120)\n",
+      "\tat org.apache.spark.deploy.SparkSubmit.main(SparkSubmit.scala)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Java gateway process exited before sending its port number",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyspark\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msql\u001b[39;00m \u001b[39mimport\u001b[39;00m SparkSession \n\u001b[0;32m----> 3\u001b[0m spark \u001b[39m=\u001b[39m SparkSession\u001b[39m.\u001b[39;49mbuilder\u001b[39m.\u001b[39;49mappName(\u001b[39m\"\u001b[39;49m\u001b[39mcapstone_streaming\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39;49mgetOrCreate()\n",
+      "File \u001b[0;32m~/bigdata-capstone/.venv/lib/python3.8/site-packages/pyspark/sql/session.py:477\u001b[0m, in \u001b[0;36mSparkSession.Builder.getOrCreate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    475\u001b[0m     sparkConf\u001b[39m.\u001b[39mset(key, value)\n\u001b[1;32m    476\u001b[0m \u001b[39m# This SparkContext may be an existing one.\u001b[39;00m\n\u001b[0;32m--> 477\u001b[0m sc \u001b[39m=\u001b[39m SparkContext\u001b[39m.\u001b[39;49mgetOrCreate(sparkConf)\n\u001b[1;32m    478\u001b[0m \u001b[39m# Do not update `SparkConf` for existing `SparkContext`, as it's shared\u001b[39;00m\n\u001b[1;32m    479\u001b[0m \u001b[39m# by all sessions.\u001b[39;00m\n\u001b[1;32m    480\u001b[0m session \u001b[39m=\u001b[39m SparkSession(sc, options\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_options)\n",
+      "File \u001b[0;32m~/bigdata-capstone/.venv/lib/python3.8/site-packages/pyspark/context.py:512\u001b[0m, in \u001b[0;36mSparkContext.getOrCreate\u001b[0;34m(cls, conf)\u001b[0m\n\u001b[1;32m    510\u001b[0m \u001b[39mwith\u001b[39;00m SparkContext\u001b[39m.\u001b[39m_lock:\n\u001b[1;32m    511\u001b[0m     \u001b[39mif\u001b[39;00m SparkContext\u001b[39m.\u001b[39m_active_spark_context \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 512\u001b[0m         SparkContext(conf\u001b[39m=\u001b[39;49mconf \u001b[39mor\u001b[39;49;00m SparkConf())\n\u001b[1;32m    513\u001b[0m     \u001b[39massert\u001b[39;00m SparkContext\u001b[39m.\u001b[39m_active_spark_context \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    514\u001b[0m     \u001b[39mreturn\u001b[39;00m SparkContext\u001b[39m.\u001b[39m_active_spark_context\n",
+      "File \u001b[0;32m~/bigdata-capstone/.venv/lib/python3.8/site-packages/pyspark/context.py:198\u001b[0m, in \u001b[0;36mSparkContext.__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls, udf_profiler_cls, memory_profiler_cls)\u001b[0m\n\u001b[1;32m    192\u001b[0m \u001b[39mif\u001b[39;00m gateway \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m gateway\u001b[39m.\u001b[39mgateway_parameters\u001b[39m.\u001b[39mauth_token \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    193\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    194\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mYou are trying to pass an insecure Py4j gateway to Spark. This\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    195\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m is not allowed as it is a security risk.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    196\u001b[0m     )\n\u001b[0;32m--> 198\u001b[0m SparkContext\u001b[39m.\u001b[39;49m_ensure_initialized(\u001b[39mself\u001b[39;49m, gateway\u001b[39m=\u001b[39;49mgateway, conf\u001b[39m=\u001b[39;49mconf)\n\u001b[1;32m    199\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    200\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_do_init(\n\u001b[1;32m    201\u001b[0m         master,\n\u001b[1;32m    202\u001b[0m         appName,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    212\u001b[0m         memory_profiler_cls,\n\u001b[1;32m    213\u001b[0m     )\n",
+      "File \u001b[0;32m~/bigdata-capstone/.venv/lib/python3.8/site-packages/pyspark/context.py:432\u001b[0m, in \u001b[0;36mSparkContext._ensure_initialized\u001b[0;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[1;32m    430\u001b[0m \u001b[39mwith\u001b[39;00m SparkContext\u001b[39m.\u001b[39m_lock:\n\u001b[1;32m    431\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m SparkContext\u001b[39m.\u001b[39m_gateway:\n\u001b[0;32m--> 432\u001b[0m         SparkContext\u001b[39m.\u001b[39m_gateway \u001b[39m=\u001b[39m gateway \u001b[39mor\u001b[39;00m launch_gateway(conf)\n\u001b[1;32m    433\u001b[0m         SparkContext\u001b[39m.\u001b[39m_jvm \u001b[39m=\u001b[39m SparkContext\u001b[39m.\u001b[39m_gateway\u001b[39m.\u001b[39mjvm\n\u001b[1;32m    435\u001b[0m     \u001b[39mif\u001b[39;00m instance:\n",
+      "File \u001b[0;32m~/bigdata-capstone/.venv/lib/python3.8/site-packages/pyspark/java_gateway.py:106\u001b[0m, in \u001b[0;36mlaunch_gateway\u001b[0;34m(conf, popen_kwargs)\u001b[0m\n\u001b[1;32m    103\u001b[0m     time\u001b[39m.\u001b[39msleep(\u001b[39m0.1\u001b[39m)\n\u001b[1;32m    105\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39misfile(conn_info_file):\n\u001b[0;32m--> 106\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mJava gateway process exited before sending its port number\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    108\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(conn_info_file, \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m info:\n\u001b[1;32m    109\u001b[0m     gateway_port \u001b[39m=\u001b[39m read_int(info)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Java gateway process exited before sending its port number"
      ]
     }
    ],
@@ -117,6 +191,15 @@
     "from pyspark.sql import SparkSession \n",
     "\n",
     "spark = SparkSession.builder.appName(\"capstone_streaming\").getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sparkContext._jsc.sc().listJars()"
    ]
   },
   {
