Add README.md and restructure files

--- a/streams/streaming.ipynb
+++ b/streams/streaming.ipynb
@@ -211,10 +211,10 @@
     "\n",
     "def append_to_psql(df: DataFrame) -> DataFrame:\n",
     "    prop = {\n",
-    "        'url': os.getenv(\"DEST_PSQL_URL\"),\n",
+    "        'url': f'jdbc:postgresql://{os.getenv(\"SINK_PSQL_HOST\")}:{os.getenv(\"SINK_PSQL_PORT\")}/{os.getenv(\"SINK_PSQL_DB\")}',\n",
     "        \"driver\": 'org.postgresql.Driver',\n",
-    "        'user': os.getenv(\"DEST_PSQL_USER\"),\n",
-    "        'password': os.getenv(\"DEST_PSQL_PASS\")\n",
+    "        'user': os.getenv(\"SINK_PSQL_USER\"),\n",
+    "        'password': os.getenv(\"SINK_PSQL_PASS\")\n",
     "    }\n",
     "    \n",
     "    df.write.jdbc(url=prop['url'], table='f_congestion', mode='append', properties=prop)\n",
